--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=acessoAuth
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bancoser1
+spring.datasource.url=jdbc:mysql://localhost:3306/banco-de-dados
 spring.datasource.username=root
 spring.datasource.password=041979
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
