--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=acessoAuth
 
 spring.datasource.url=jdbc:mysql://localhost:3306/banco-de-dados
 spring.datasource.username=root
-spring.datasource.password=041979
+spring.datasource.password=´´
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
